package com.example.progressupdatedemo.core.constants

object TestTags {
    // Login screen
    const val LOGIN_SCREEN_ACCOUNT_ICON_TAG = "login_screen_account_icon"
    const val LOGIN_SCREEN_EMAIL_INPUT_FIELD_TAG = "login_screen_email_input_field"
    const val LOGIN_SCREEN_PASSWORD_INPUT_FIELD_TAG = "login_screen_password_input_field"
    const val LOGIN_SCREEN_LOGIN_BUTTON_TAG = "login_screen_login_button"
    const val LOGIN_SCREEN_LOGIN_PROMPT_TEXT_TAG = "login_screen_login_prompt_text"
    const val LOGIN_SCREEN_SIGN_UP_PROMPT_TEXT_TAG = "login_screen_sign_up_prompt_text"

    // Splash screen
    const val SPLASH_SCREEN_APPLICATION_ICON_ICON = "splash_screen_application_icon_icon"
    const val SPLASH_SCREEN_APPLICATION_ICON_TEXT = "splash_screen_application_icon_text"
}